# SmallTest

./: .gitignore  CMakeLists.txt  README.md  SmallTest.h  gen_single_header.py
include/: Assertion.hpp  Console.hpp  IOutput.hpp  ITests.hpp  Macros.hpp  Result.hpp  SmallTest.hpp  TestException.hpp  TestSuite.hpp  Tests.hpp
src/: Assertion.h  Assertion.hpp  Console.cpp  Console.h  Console.hpp  IOutput.h  IOutput.hpp  ITest.h  ITests.hpp  Macros.hpp  Result.cpp  Result.h  Result.hpp  Test.h  TestException.hpp  TestSuite.cpp  TestSuite.h  TestSuite.hpp  Tests.cpp  Tests.hpp  main.cpp
